CODE/ver_2_plaintext/01_vpc.tf
# ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
#                         VPC 생성
# ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
resource "aws_vpc" "this" {
  cidr_block = "10.50.0.0/16"
  tags       = { "Name" = "test-tf-vpc" }
}
